--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -161,7 +161,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="viewNewForm">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="New Form" iconclass="wi wi-note-add" name="dialogNewForm">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Submit Form" iconclass="wi wi-note-add" name="dialogNewForm">
             <wm-panel iconclass="" autoclose="outsideClick" name="panelNewFormPage" content="newFormDialog" title="" class="panel-transparent" margin="0px">
                 <wm-param name="municipalityId" value="bind:Widgets.selectStandardUserMunicipalites.datavalue.ID" type="integer"></wm-param>
                 <wm-param name="dialogName" value="dialogNewForm" type="string"></wm-param>
