--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -37,7 +37,8 @@
                                     <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn18">
-                                    <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="false" widget="select" placeholder="Search" orderby="stateName:asc" displayexpression="stateName"></wm-form-field>
+                                    <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="false" widget="select" placeholder="Search" orderby="stateName:asc"
+                                    displayexpression="stateName"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow10">
@@ -45,7 +46,8 @@
                                     <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn20">
-                                    <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="USA" readonly="false"></wm-form-field>
+                                    <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                    defaultvalue="USA" readonly="false"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow21_1" padding="3em unset unset unset">
@@ -81,8 +83,8 @@
                                     <wm-composite name="composite5">
                                         <wm-label class="col-md-3 form-control-static" name="label8" caption="Municipality Search" width="20%" fontweight="bold"></wm-label>
                                         <wm-container class="col-md-9" name="container5" width="80%">
-                                            <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields" required="false"
-                                            width="100%" type="autocomplete" orderby="municipalityName:asc" on-select="textSearchMunicipalitiesSelect($event, $scope, selectedValue)"></wm-search>
+                                            <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo"
+                                            datafield="All Fields" required="false" width="100%" type="autocomplete" orderby="municipalityName:asc" on-select="textSearchMunicipalitiesSelect($event, $scope, selectedValue)"></wm-search>
                                         </wm-container>
                                     </wm-composite>
                                 </wm-gridcolumn>
@@ -120,7 +122,7 @@
                         </wm-layoutgrid>
                     </wm-panel>
                 </wm-wizardstep>
-                <wm-wizardstep name="wizardstep3" title="Communication">
+                <wm-wizardstep name="wizardstep3" title="Communication" show="false">
                     <wm-panel iconclass="wi wi-notifications" autoclose="outsideClick" name="panel2" title="Notification Frequency">
                         <wm-layoutgrid name="layoutgrid2_1" columns="1">
                             <wm-gridrow name="gridrow22">
@@ -132,7 +134,7 @@
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
                                     <wm-composite name="composite2">
                                         <wm-container class="col-md-9" name="container2">
-                                            <wm-radioset height="auto" name="radiosetCF" dataset="Immediately,Daily (Recommended),Weekly,Monthly,Never" selectedvalue="Daily (Recommended)"></wm-radioset>
+                                            <wm-radioset height="auto" name="radiosetCF" dataset="Immediately,Daily,Weekly,Monthly,Never" selectedvalue="Daily" disabled="false"></wm-radioset>
                                         </wm-container>
                                     </wm-composite>
                                 </wm-gridcolumn>
@@ -157,7 +159,8 @@
                                         <wm-container class="col-md-9" name="container3" width="300px">
                                             <wm-text name="textPwd" placeholder="Enter Password" type="password" regexp=".*" required="true" updateon="default" updatedelay="300" on-change="textPwdChange($event, $scope, newVal, oldVal)" autocomplete="false"></wm-text>
                                         </wm-container>
-                                        <wm-label padding="unset 0.5em" name="label12_2" show="bind:pwordRequirementsMet === false" caption="<i class=&quot;fa fa-warning&quot;></i> Password requirements have not been met. Please choose a strong password." color="#ef6262" class="form-control-static"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label12_2" show="bind:pwordRequirementsMet === false" caption="<i class=&quot;fa fa-warning&quot;></i> Password requirements have not been met. Please choose a strong password."
+                                        color="#ef6262" class="form-control-static"></wm-label>
                                     </wm-composite>
                                 </wm-gridcolumn>
                             </wm-gridrow>
@@ -178,7 +181,8 @@
                         <wm-layoutgrid name="layoutgrid7">
                             <wm-gridrow name="gridrow23">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                                    <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9" name="checkboxAcceptEULA" required="true"></wm-checkbox>
+                                    <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9"
+                                    name="checkboxAcceptEULA" required="true"></wm-checkbox>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
