--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -30,7 +30,7 @@
                                 <wm-layoutgrid name="layoutgrid16">
                                     <wm-gridrow name="gridrow51">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn85">
-                                            <wm-label padding="unset 0.5em" name="label57" caption="These users have subscribed to your municipality. They can submit forms, pay fees, create projects, and submit a contractor application."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label57" caption="Subscribers have selected to do business with your municipality, either during the user account creation wizard or later on their My Profile page. They can submit forms, pay fees, create projects, and submit a contractor application."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow52">
@@ -53,7 +53,7 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow44">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn75">
-                                            <wm-label padding="unset 0.5em" name="label56" caption="These users are employees of your municipality. They are granted access to the &quot;My Municipality&quot; dashboard, where they can process forms, create projects, maintain land records, approve/suspend contractors, and view financial transactions."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label69_1" caption="Municipality Employees are granted access to the &quot;My Municipality&quot; dashboard, where they can process forms, create projects, maintain land records, approve/suspend contractors, and view financial transactions."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label58" caption="Municipality Employees can also be assigned additional Inspection or Code Enforcement roles, or be made a Municipality Admin."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label69" caption="Municipality Employees must also be a municipality Subscriber." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
@@ -83,7 +83,7 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow45">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn76">
-                                            <wm-label padding="unset 0.5em" name="label55" caption="These users are Municipality Employees who have been granted access to the &quot;Inspections&quot; dashboard. They can schedule and perform inspections."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label55" caption="Inspectors are Municipality Employees who have also been granted access to the &quot;Inspections&quot; dashboard. They can perform inspections that have been requested for forms."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label64" caption="In addition to being a municipality Subscriber, Inspectors must also have the Municipality Employee role." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -112,7 +112,8 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow46">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn77">
-                                            <wm-label padding="unset 0.5em" name="label54" caption="These users are Municipality Employees who have been granted access to the &quot;Inspections&quot; dashboard. In addition to scheduling and performing inspections, they can also maintain inspection designs and categories."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label54" caption="Inspector Managers are Municipality Employees who have also been granted access to the &quot;Inspections&quot; dashboard."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label70" caption="Like an Inspector, they can perform inspections that have been requested on forms, but they can also schedule/assign inspections and can maintain inspection designs and categories."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label65" caption="In addition to being a municipality Subscriber, Inspector Managers must also have the Municipality Employee and Inspector roles." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -141,7 +142,7 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow47">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn78">
-                                            <wm-label padding="unset 0.5em" name="label53" caption="These users are Municipality Employees who have been granted access to the &quot;Code Enforcement&quot; dashboard. They can review and process cases. &quot;Cases&quot; are just forms where the &quot;Code Enforcement&quot; setting is checked."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label53" caption="Code Officers are Municipality Employees who have also been granted access to the &quot;Code Enforcement&quot; dashboard. They can review and process &quot;Cases&quot; (which are forms where the &quot;Code Enforcement&quot; setting is selected)."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label66" caption="In addition to being a municipality Subscriber, Code Officers must also have the Municipality Employee role." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -170,7 +171,8 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow48">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn79">
-                                            <wm-label padding="unset 0.5em" name="label52" caption="These users are Municipality Employees who have been granted access to the &quot;Code Enforcement&quot; dashboard. In addition to reviewing and processing cases, they can also maintain form designs and categories."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label52" caption="Code Managers are Municipality Employees who have also been granted access to the &quot;Code Enforcement&quot; dashboard."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label71" caption="Like a Code Officer, they can review and process cases, but they can also maintain form designs, form categories, and municipality code sets."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label67" caption="In addition to being a municipality Subscriber, Code Managers must also have the Municipality Employee and Code Officer roles." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -198,8 +200,8 @@
                                 <wm-layoutgrid name="layoutgrid6_1">
                                     <wm-gridrow name="gridrow18_1">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn80">
-                                            <wm-label padding="unset 0.5em" name="label51" caption="These users are Municipality Employees who have been granted access to the &quot;Administration&quot; dashboard."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label59" caption="In addition to the tasks that an employee can perform, they can also assign user roles, manage user groups, manage manual fee types, set the municipality schedule and contact information, and manage form and inspection designs."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label51" caption="Municipality Admins are Municipality Employees who have been granted access to the &quot;My Municipality&quot;, &quot;Inspections&quot;, &quot;Code Enforcement&quot;, and &quot;Administration&quot; dashboards."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label59" caption="They can perform the tasks available to all municipality users, and they can also assign user roles, manage user groups, manage fee types, set the municipality schedule and contact information, manage form and inspection designs, and maintain code sets."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label68" caption="In addition to being a municipality Subscriber, Municipality Admins must also have the Municipality Employee, Inspector, Inspector Manager, Code Officer, and Code Manager roles."
                                             fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
@@ -225,9 +227,9 @@
                                 <wm-layoutgrid name="layoutgrid15">
                                     <wm-gridrow name="gridrow49">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn81">
-                                            <wm-label padding="unset 0.5em" name="label50" caption="These user groups are composed of Municipality Employees."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label60" caption="Groups are used to control which municipality employees are responsible for processing forms and which are given write access to forms, based on the current form status for any given form that has been submitted by a user."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label62" caption="The &quot;Process Owner&quot; group and &quot;Write Access&quot; group permissions are controlled for each form status (per individual form) on the Edit Form page."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label50" caption="User Groups are composed of Municipality Employees."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label60" caption="Groups are used to control which municipality employees are responsible for processing forms and which are given write access permissions for forms while they advance through their business process."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label62" caption="For each status on each form, you can select a &quot;Process Owner&quot; and &quot;Write Access&quot; group from the selections below."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow50">
